--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@ body    {
 
 @property --a
 {
-    syntax: '<angel>';
-    inherit: false;
+    syntax: '<angle>';
+    inherits: false;
     initial-value: 0deg;
 }
 
@@ -37,11 +37,35 @@ body    {
 
 @keyframes rotating
 {
-    0% {
+    0% 
+    {
         --a: 0deg;
     }
 
-    100% {
+    100% 
+    {
         --a: 360deg;
     }
 }
+
+.box::before    {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: repeating-conic-gradient(from var(--a), #45f3ff 0%,#45f3ff 5%, transparent 5%, transparent 40%, #45f3ff 50%);
+    filter: drop-shadow(0 15px 50px #000);
+    border-radius: 20px;
+    animation: rotating 4s linear infinite;
+    animation-delay: -1s;
+  
+}
+
+.box::after
+{
+    content: '';
+    position: absolute;
+    inset: 4px;
+    background: #25252b;
+
+}  
